# sentiment-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  embedding_max_mean_var.npy  embedding_max_model_weights.npy  embedding_mean_var.npy  embedding_model_weights.npy  embedding_tfidf_mean_var.npy  embedding_tfidf_model_weights.npy  frequencies.npy  idf_scores.npy  mean_var.npy  model_weights.npy  pyproject.toml
.specify/memory/: constitution.md
specs/001-word-embeddings-glove/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-word-embeddings-glove/checklists/: requirements.md
specs/001-word-embeddings-glove/contracts/: embedding_feature.py  glove_embeddings.py  model_integration.py
trading_sentiment_analysis/clean/: main.py
trading_sentiment_analysis/embeddings/: __init__.py  embedding_feature.py  glove.py  test_embedding_feature.py  test_glove.py
trading_sentiment_analysis/label/: download_sentiment_data.py  main.py  stock_price_label.py  test_stock_price_label.py
trading_sentiment_analysis/nltk_setup/: main.py
trading_sentiment_analysis/predict/: main.py
trading_sentiment_analysis/process/: test_text.py  text.py
trading_sentiment_analysis/stock_api/: cache.py  stock_api.py  test_twelve_data.py  twelve_data.py
trading_sentiment_analysis/train/: activation.py  cost.py  feature.py  frequency.py  main.py  model.py  normalization.py  prediction.py  test_activation.py  test_cost.py  test_cost_metrics.py  test_feature.py  test_frequency.py  test_model_embeddings.py  test_process.py
